@@ -63,9 +63,10 @@ Febuary 3 2023
 
 ===========Version 0.1.3 Prototype==============
 * Save Creation Date information is populated.
+* Version info gathering change.
 
 ================================================
-===========Version 0.1.4 Prototype==============
+===========Version 0.2.0 Prototype==============
 ================================================
-===========Version 0.1.5 Prototype==============
+===========Version 0.2.1 Prototype==============
 ================================================
